# bibliognost

./: .gitignore  LICENSE  README.md  pyproject.toml
bibliognost/: cli.py  persistence.py
bibliognost/tui/: __init__.py  app.py  views.py
